--- a/bon2.css
+++ b/bon2.css
@@ -24,34 +24,30 @@ header h1{
 nav{
 	position: absolute;
 	margin: 270px auto 0;
-	width: 620px;
-	height: 500px;
-	background: black;
-	border-radius: 10px
-	font-size 0;
-top: 20px;
-left: 650px;
-}
+	width: 570px;
+	background: #191919;
+	transform: translate(-50%,-50%);
+	padding: 40px;
+	top: 30%;
+	left: 50%;
+	text-align: center;
 
-footer{
-
-	background: black;
-	width: 100%;
-	position: absolute;
-	bottom: 0;
-
-}
-footer h1{
-	color: white;
 }
 nav h1{
 	color: white;
 }
 nav p{
-	color: white
+	color: white;
 }
+
 nav button{
 	position: absolute;
-	top: 465px;
+	top: 500px;
 	left: 270px;
+}
+nav p a{
+color: white;
+}
+a:hover{
+	color: red;
 }
